# api/http/v1/openapi.types.go
@@ -1,6 +1,6 @@
 // Package v1 provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package v1
 
 import (
@@ -206,9 +206,8 @@ type RuleFindOptions struct {
 	PageSize int `json:"page_size"`
 }
 
-// VerifyCodeRequest defines model for VerifyCodeRequest.
-type VerifyCodeRequest struct {
-	Code  *string              `json:"code,omitempty"`
+// SendCodeRequest defines model for SendCodeRequest.
+type SendCodeRequest struct {
 	Email *openapi_types.Email `json:"email,omitempty"`
 }
 
@@ -234,9 +233,13 @@ type ListRuleParams struct {
 	RuleFindOptions *RuleFindOptions `form:"ruleFindOptions,omitempty" json:"ruleFindOptions,omitempty"`
 }
 
-// SendCodeJSONBody defines parameters for SendCode.
-type SendCodeJSONBody struct {
-	Email openapi_types.Email `json:"email"`
+// VerifyCodeParams defines parameters for VerifyCode.
+type VerifyCodeParams struct {
+	// Email User email address
+	Email openapi_types.Email `form:"email" json:"email"`
+
+	// Code Verification code
+	Code string `form:"code" json:"code"`
 }
 
 // CreateHostJSONRequestBody defines body for CreateHost for application/json ContentType.
@@ -270,7 +273,4 @@ type LoginUserJSONRequestBody = LoginRequest
 type RegisterUserJSONRequestBody = RegisterRequest
 
 // SendCodeJSONRequestBody defines body for SendCode for application/json ContentType.
-type SendCodeJSONRequestBody SendCodeJSONBody
-
-// VerifyCodeJSONRequestBody defines body for VerifyCode for application/json ContentType.
-type VerifyCodeJSONRequestBody = VerifyCodeRequest
+type SendCodeJSONRequestBody = SendCodeRequest
