# api/openapi/headnexus.yaml
@@ -364,15 +364,23 @@ paths:
         '204':
           description: Successful response
   /api/v1/user/verify-code:
-    post:
+    get:
       summary: Verify verification code
       operationId: verifyCode
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/VerifyCodeRequest'
+      parameters:
+        - name: email
+          in: query
+          description: User email address
+          required: true
+          schema:
+            type: string
+            format: email
+        - name: code
+          in: query
+          description: Verification code
+          required: true
+          schema:
+            type: string
       responses:
         '204':
           description: Successful response
@@ -393,20 +401,14 @@ paths:
           description: Successful response
   /api/v1/user/send-code:
     post:
-      summary: 发送验证码
+      summary: 发送激活邮件
       operationId: sendCode
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: object
-              required:
-                - email
-              properties:
-                email:
-                  type: string
-                  format: email
+              $ref: '#/components/schemas/SendCodeRequest'
       responses:
         '204':
           description: Successful response
@@ -715,16 +717,13 @@ components:
           enum:
             - none
             - lighthouse
-    VerifyCodeRequest:
+    SendCodeRequest:
       type: object
       properties:
         email:
           type: string
           format: email
           example: 123@qq.com
-        code:
-          type: string
-          example: 123456
     LoginRequest:
       type: object
       properties:
